rename #wrap to avoid confilict with function

--- a/less/jaguar.less
+++ b/less/jaguar.less
@@ -13,7 +13,7 @@ li {
     list-style-type: none;
 }
 
-#wrap {
+#pagewrap {
     position: relative;
 }
 
